# hedl

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  SECURITY.md  SPEC.md
bindings/c/: .gitlab-ci.yml  CMakeLists.txt  README.md
bindings/c/cmake/: HEDLConfig.cmake.in
bindings/c/examples/: CMakeLists.txt  basic.c  cmake_integration.c  convert.c  error_handling.c  performance.c
crates/hedl/: Cargo.toml  README.md
crates/hedl-bench/: Cargo.toml  README.md
crates/hedl-bench/baselines/: current.json  v1.0.0.json
crates/hedl-bench/examples/: custom_report.rs  regression_check.rs  simple_benchmark.rs
crates/hedl-bench/src/: datasets.rs  error.rs  lib.rs  report.rs  token_counter.rs
crates/hedl-bench/tests/: negative_tests.rs
crates/hedl-cli/: Cargo.toml  README.md
crates/hedl-cli/fuzz/: .gitignore  Cargo.toml  README.md
crates/hedl-cli/src/: batch.rs  error.rs  lib.rs  main.rs
crates/hedl-cli/tests/: batch_tests.rs  cli_integration_tests.rs  cli_structure_test.rs  completion_tests.rs  property_tests.rs  stats_correctness.rs  with_counts_test.rs
crates/hedl-core/: Cargo.toml  Cargo.toml.fuzz  README.md
crates/hedl-core/examples/: custom_limits.rs  inference_optimization_demo.rs
crates/hedl-core/fuzz/: .gitignore  Cargo.toml  README.md  run_all_fuzzers.sh
crates/hedl-core/src/: block_string.rs  convert.rs  document.rs  error.rs  header.rs  inference.rs  lib.rs  limits.rs  parser.rs  preprocess.rs  reference.rs  traverse.rs  value.rs
crates/hedl-core/tests/: conformance_tests.rs  count_hint_test.rs  property_tests.rs  stress_tests.rs  unicode_tests.rs
crates/hedl-csv/: Cargo.toml  README.md
crates/hedl-csv/examples/: basic_usage.rs  custom_pluralization.rs
crates/hedl-csv/fuzz/: Cargo.toml  README.md
crates/hedl-csv/src/: error.rs  from_csv.rs  lib.rs  to_csv.rs
crates/hedl-csv/tests/: comprehensive_tests.rs  integration_test.rs  schema_inference.rs
crates/hedl-ffi/: Cargo.toml  README.md  build.rs  cbindgen.toml  hedl.h
crates/hedl-ffi/examples/: audit_logging.rs  callback_demo.c  example.c
crates/hedl-ffi/include/: hedl.h
crates/hedl-ffi/src/: audit.rs  diagnostics.rs  error.rs  lib.rs  memory.rs  operations.rs  parsing.rs  types.rs  utils.rs
crates/hedl-ffi/tests/: audit_logging_tests.rs  callback_tests.rs  concurrency_tests.rs  safety_tests.rs
crates/hedl-json/: Cargo.toml  README.md  libschema_cache.rlib
crates/hedl-json/examples/: jsonpath_demo.rs  partial_parsing_demo.rs  profile_allocations.rs  schema_generation.rs  streaming_demo.rs  zero_copy_demo.rs
crates/hedl-json/src/: from_json.rs  jsonpath.rs  lib.rs  schema_cache.rs  schema_gen.rs  streaming.rs  to_json.rs
crates/hedl-json/tests/: comprehensive_tests.rs  jsonpath_tests.rs  partial_parsing_tests.rs  schema_gen_tests.rs  streaming_tests.rs  zero_copy_test.rs
crates/hedl-lint/: Cargo.toml  README.md
crates/hedl-lint/src/: diagnostic.rs  lib.rs  rules.rs  runner.rs
crates/hedl-lint/tests/: comprehensive_tests.rs
crates/hedl-lsp/: Cargo.toml  README.md
crates/hedl-lsp/examples/: cache_demo.rs
crates/hedl-lsp/src/: analysis.rs  backend.rs  backend.rs.backup  completion.rs  constants.rs  document_manager.rs  hover.rs  lib.rs  main.rs  reference_index.rs  symbols.rs  tests.rs  utils.rs
crates/hedl-lsp/tests/: README.md  backend_error_tests.rs  concurrency_tests.rs  constants_usage_tests.rs  error_path_tests.rs  header_cache_tests.rs  lru_memory_tests.rs  lsp_tests.rs  property_based_tests.rs  reference_index_tests.rs
crates/hedl-mcp/: Cargo.toml  README.md
crates/hedl-mcp/examples/: README.md  cache_speedup_demo.rs  schema_macro_usage.rs
crates/hedl-mcp/src/: cache.rs  error.rs  lib.rs  main.rs  protocol.rs  rate_limiter.rs  server.rs
crates/hedl-mcp/tests/: cache_integration_tests.rs  parallel_performance_tests.rs  rate_limiting_tests.rs
crates/hedl-neo4j/: Cargo.toml  README.md
crates/hedl-neo4j/examples/: builder_pattern.rs  streaming_example.rs
crates/hedl-neo4j/src/: config.rs  error.rs  from_neo4j.rs  lib.rs  to_cypher.rs
crates/hedl-neo4j/tests/: integration_tests.rs  property_tests.rs  validation_tests.rs
crates/hedl-parquet/: Cargo.toml  README.md
crates/hedl-parquet/src/: from_parquet.rs  lib.rs  to_parquet.rs
crates/hedl-parquet/tests/: comprehensive_tests.rs  error_case_tests.rs  error_kind_tests.rs  position_preservation_tests.rs  security_tests.rs
crates/hedl-stream/: Cargo.toml  README.md
crates/hedl-stream/examples/: async_basic.rs  async_concurrent.rs  async_file.rs  timeout_demo.rs
crates/hedl-stream/fuzz/: Cargo.toml  README.md
crates/hedl-stream/src/: async_parser.rs  async_reader.rs  error.rs  event.rs  lib.rs  parser.rs  reader.rs
crates/hedl-stream/tests/: simd_correctness.rs  streaming_tests.rs  timeout_tests.rs
crates/hedl-test/: Cargo.toml  README.md
crates/hedl-test/fixtures/: blog.hedl  blog.json  comprehensive.hedl  comprehensive_stress_test.hedl  deep_nest.hedl  edge_cases.hedl  empty.hedl  expressions.hedl  mixed_type_list.hedl  named_values.hedl  references.hedl  scalars.hedl  special_strings.hedl  tensors.hedl  user_list.hedl  with_nest.hedl  with_references.hedl
crates/hedl-test/src/: counts.rs  expr_utils.rs  lib.rs
crates/hedl-test/tests/: expression_error_paths.rs  generate_fixtures.rs  roundtrip_tests.rs
crates/hedl-toon/: Cargo.toml  README.md
crates/hedl-toon/examples/: compare_toon.rs  pluralization_demo.rs
crates/hedl-toon/src/: error.rs  from_toon.rs  lib.rs  to_toon.rs
crates/hedl-toon/tests/: needs_quoting_tests.rs  pluralization_tests.rs  property_tests.rs
crates/hedl-wasm/: Cargo.toml  README.md  hedl.d.ts
crates/hedl-wasm/examples/: README.md  browser-basic.html  browser-editor.html  node-basic.js  node-convert.js  react-example.jsx  token_estimation_demo.rs  typescript-example.ts
crates/hedl-wasm/src/: lib.rs
crates/hedl-xml/: Cargo.toml  README.md
crates/hedl-xml/examples/: basic_conversion.rs  schema_validation.rs  streaming_large_files.rs
crates/hedl-yaml/: Cargo.toml  README.md
(+418 files in other folders)
