[package]
name = "hedl-cli"
version = "1.1.0"
edition = "2021"
description = "HEDL command-line interface"
license.workspace = true

[[bin]]
name = "hedl"
path = "src/main.rs"

[dependencies]
hedl-core.workspace = true
hedl-c14n.workspace = true
hedl-json.workspace = true
hedl-yaml.workspace = true
hedl-xml.workspace = true
hedl-csv.workspace = true
hedl-parquet.workspace = true
hedl-toon.workspace = true
hedl-lint.workspace = true
clap.workspace = true
clap_complete = "4.4"
serde_json.workspace = true
thiserror.workspace = true
colored = "2.0"
rayon = "1.8"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.0"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
