[package]
name = "hedl-csv"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "CSV file to/from HEDL conversion"

[dependencies]
hedl-core = { path = "../hedl-core" }
csv = "1.3"
thiserror.workspace = true

[dev-dependencies]
hedl-core = { path = "../hedl-core" }
hedl-test = { workspace = true }
