[package]
name = "hedl-csv"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "CSV file to/from HEDL conversion"

[dependencies]
hedl-core.workspace = true
csv = "1.3"
thiserror.workspace = true

[dev-dependencies]
hedl-core.workspace = true
hedl-test = { workspace = true }
