[package]
name = "hedl-ffi"
version.workspace = true
edition = "2021"
description = "HEDL C ABI bindings"
license.workspace = true

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

# Feature flags to control which format converters are included.
# This helps reduce binary size for specialized use cases.
[features]
default = ["all-formats"]
all-formats = ["json", "yaml", "xml", "csv", "parquet", "neo4j", "toon"]

# Individual format converters - can be selected independently
json = ["dep:hedl-json"]
yaml = ["dep:hedl-yaml"]
xml = ["dep:hedl-xml"]
csv = ["dep:hedl-csv"]
parquet = ["dep:hedl-parquet"]
neo4j = ["dep:hedl-neo4j"]
toon = ["dep:hedl-toon"]

# Convenience feature groups
minimal = []  # Core only, no format converters
web-formats = ["json", "yaml", "xml"]  # Common web formats
data-formats = ["json", "csv", "parquet"]  # Data processing formats

[dependencies]
hedl-core.workspace = true
hedl-c14n.workspace = true
hedl-lint.workspace = true

# Logging and tracing
tracing = "0.1"

# Optional format converters (controlled by features)
hedl-json = { workspace = true, optional = true }
hedl-yaml = { workspace = true, optional = true }
hedl-xml = { workspace = true, optional = true }
hedl-csv = { workspace = true, optional = true }
hedl-parquet = { workspace = true, optional = true }
hedl-neo4j = { workspace = true, optional = true }
hedl-toon = { workspace = true, optional = true }

[build-dependencies]
cbindgen = "0.27"

[dev-dependencies]
# For thread safety testing
parking_lot = "0.12"
# For testing logging configuration
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
