[package]
name = "hedl-json"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "HEDL to/from JSON conversion"

[dependencies]
hedl-core = { path = "../hedl-core" }
serde.workspace = true
serde_json.workspace = true
serde_json_path = "0.7"
thiserror.workspace = true

[dev-dependencies]
hedl-test = { workspace = true }
criterion = { version = "0.5", features = ["html_reports"] }
