[package]
name = "hedl-lint"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "HEDL linting and best practices validation"

[dependencies]
hedl-core = { path = "../hedl-core" }
thiserror.workspace = true

[dev-dependencies]
hedl-bench = { path = "../hedl-bench" }

