[package]
name = "hedl-lint"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "HEDL linting and best practices validation"

[dependencies]
hedl-core.workspace = true
thiserror.workspace = true

[dev-dependencies]

