[package]
name = "hedl-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Language Server Protocol (LSP) implementation for HEDL"
keywords = ["hedl", "lsp", "ide", "editor", "language-server"]
categories = ["development-tools", "text-editors"]

[[bin]]
name = "hedl-lsp"
path = "src/main.rs"

[dependencies]
hedl-core = { workspace = true }
hedl = { workspace = true }
hedl-lint = { workspace = true }
hedl-c14n = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tower-lsp = "0.20"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap = "5.5"
ropey = "1.6"
parking_lot = "0.12"

[dev-dependencies]
tempfile = "3.8"
loom = "0.7"
rand = "0.8"
proptest = "1.4"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }
