[package]
name = "hedl-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Model Context Protocol (MCP) server for HEDL - AI/LLM integration"
keywords = ["hedl", "mcp", "ai", "llm", "context"]
categories = ["development-tools"]

[[bin]]
name = "hedl-mcp"
path = "src/main.rs"

[dependencies]
hedl-core = { workspace = true }
hedl-json = { workspace = true }
hedl-c14n = { workspace = true }
hedl-lint = { workspace = true }
hedl-yaml = { workspace = true }
hedl-csv = { workspace = true }
hedl-parquet = { workspace = true }
hedl-neo4j = { workspace = true }
hedl-stream = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2.4"
glob = "0.3"
base64 = "0.22"
csv = "1.3"
dashmap = "6.1"
rayon = "1.10"

[dev-dependencies]
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports"] }

