[package]
name = "hedl-parquet"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Bidirectional conversion between Parquet and HEDL formats"

[dependencies]
hedl-core = { workspace = true }
thiserror = { workspace = true }
parquet = { workspace = true }
arrow = { workspace = true }
bytes = "1.11"

[dev-dependencies]
tempfile = "3.13"
hedl-test = { workspace = true }
criterion = { version = "0.5", features = ["html_reports"] }
