[package]
name = "hedl-test"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Shared test fixtures and utilities for HEDL format converters"
keywords = ["hedl", "test", "fixtures"]
categories = ["development-tools::testing"]

[features]
generate = []

[dependencies]
hedl-core = { workspace = true }
hedl-c14n.workspace = true

[dev-dependencies]
hedl-json.workspace = true
hedl-yaml.workspace = true
hedl-xml.workspace = true
regex = "1.0"
