[package]
name = "hedl-toon"
version = "1.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "HEDL to TOON (Token-Oriented Object Notation) conversion"

[dependencies]
hedl-core.workspace = true
thiserror.workspace = true

[dev-dependencies]
hedl-test = { workspace = true }
hedl-json.workspace = true
proptest = "1.5"
